--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div>Contact me:</div>
         <ul>
             <li>Discord: <pre>Wuzado[hash]3715</pre></li>
+            <li>Matrix: <pre>@wuzado:wuzado.com</pre></li>
             <li>Email: <pre>wuzado[at]pm[dot]me</pre></li>
         </ul>
     </body>
