--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li>Discord: <pre>Wuzado[hash]3715</pre></li>
             <li>Matrix: <pre>@wuzado:wuzado.com</pre></li>
-            <li>Email: <pre>wuzado[at]pm[dot]me</pre></li>
+            <li>Email: <pre>me[at]wuzado[dot]com</pre></li>
         </ul>
     </body>
 </html>
